[workspace]
resolver = "2"
members = ["./packages/*", "./plugins/*"]
exclude = ["**/node_modules"]


[workspace.package]
edition = "2021"
version = "0.4.1"
authors = ["John Beresford <jberesford@volcaus.com>"]
license = "GPL-3.0"
readme = "./README.md"
repository = "https://github.com/JMBeresford/retrom"

[workspace.dependencies]
tauri = { version = "2.0.0-rc.8", features = ["tracing"] }
diesel = { version = "^2.2.0", features = [
  "serde_json",
  "postgres",
  "numeric",
] }
diesel_migrations = { version = "^2.2.0", features = ["postgres"] }
diesel-async = { version = "^0.5.0", features = ["postgres", "deadpool"] }
deadpool = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "json",
] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "compat"] }
dotenvy = "0.15.7"
retrom-db = { path = "./packages/db", version = "^0.4.1" }
retrom-client = { path = "./packages/client", version = "^0.4.1" }
retrom-service = { path = "./packages/service", version = "^0.4.1" }
retrom-codegen = { path = "./packages/codegen", version = "^0.4.1" }
retrom-plugin-installer = { path = "./plugins/retrom-plugin-installer", version = "^0.4.1" }
retrom-plugin-launcher = { path = "./plugins/retrom-plugin-launcher", version = "^0.4.1" }
futures = "0.3.30"
bytes = "1.6.0"
reqwest = { version = "0.12.3", features = [
  "json",
  "stream",
  "gzip",
  "brotli",
  "deflate",
] }
tonic = { version = "0.11", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
tonic-web = "0.11"
prost = "0.12"
prost-types = "0.12"
tonic-reflection = "0.11.0"
async-trait = "0.1"
serde_repr = "0.1.19"
retry = { version = "2.0.0" }
tokio-retry = { version = "0.3.0" }
tokio-stream = "0.1.15"
thiserror = "1.0"
sanitize-filename = "0.5.0"
hyper-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "0.14", features = ["full", "http2", "http1"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4", features = ["full", "cors"] }
tokio-rustls = "0.25.0"
webpki-roots = "0.26.5"
hyper-rustls = { version = "0.25.0", features = ["http2"] }
