[workspace]
resolver = "2"
members = ["./packages/*", "./plugins/*"]
exclude = ["**/node_modules", "./packages/client/web"]


[workspace.package]
edition = "2021"
version = "0.7.14"
authors = ["John Beresford <jberesford@volcaus.com>"]
license = "GPL-3.0"
readme = "./README.md"
repository = "https://github.com/JMBeresford/retrom"

[workspace.dependencies]
tauri = { version = "2.0.0-rc.8", features = ["tracing"] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-opener = "2.2.5"
diesel = { version = "^2.2.0", features = [
  "serde_json",
  "postgres",
  "numeric",
] }
diesel_migrations = { version = "^2.2.0", features = ["postgres"] }
diesel-async = { version = "^0.5.0", features = ["postgres", "deadpool"] }
deadpool = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "json",
] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io", "compat"] }
dotenvy = "0.15.7"
retrom-db = { path = "./packages/db", version = "^0.7.14" }
retrom-service = { path = "./packages/service", version = "^0.7.14" }
retrom-codegen = { path = "./packages/codegen", version = "^0.7.14" }
retrom-plugin-installer = { path = "./plugins/retrom-plugin-installer", version = "^0.7.14" }
retrom-plugin-launcher = { path = "./plugins/retrom-plugin-launcher", version = "^0.7.14" }
retrom-plugin-service-client = { path = "./plugins/retrom-plugin-service-client", version = "^0.7.14" }
retrom-plugin-steam = { path = "./plugins/retrom-plugin-steam", version = "^0.7.14" }
retrom-plugin-config = { path = "./plugins/retrom-plugin-config", version = "^0.7.14" }
retrom-plugin-standalone = { path = "./plugins/retrom-plugin-standalone", version = "^0.7.14" }
config = { version = "0.13.4", features = ["json5"] }
futures = "0.3.30"
bytes = "1.6.0"
reqwest = { version = "0.12.3", features = [
  "json",
  "stream",
  "gzip",
  "brotli",
  "deflate",
] }
tonic = { version = "0.11", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
tonic-web = "0.11"
prost = "0.12"
prost-types = "0.12"
tonic-reflection = "0.11.0"
async-trait = "0.1"
retry = { version = "2.0.0" }
tokio-retry = { version = "0.3.0" }
tokio-stream = "0.1.15"
thiserror = "1.0"
sanitize-filename = "0.5.0"
hyper-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "0.14", features = ["full", "http2", "http1"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.4", features = ["full", "cors"] }
tokio-rustls = "0.25.0"
webpki-roots = "0.26.5"
hyper-rustls = { version = "0.25.0", features = ["http2"] }
notify = "7.0.0"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
tempfile = "3.16.0"
walkdir = "2.5.0"
