[workspace]
resolver = "2"
members = [
  "packages/client",
  "packages/codegen",
  "packages/db",
  "packages/service",
  "packages/grpc-service",
  "packages/rest-service",
  "packages/service-common",
  "packages/telemetry",

  "plugins/retrom-plugin-config/",
  "plugins/retrom-plugin-installer/",
  "plugins/retrom-plugin-launcher/",
  "plugins/retrom-plugin-service-client/",
  "plugins/retrom-plugin-standalone/",
  "plugins/retrom-plugin-steam/",
]
exclude = [
  "./packages/ui",
  "./packages/configs",
  "node_modules",
  "dist",
  "target",
  "vendor",
]

[workspace.package]
edition = "2021"
version = "0.7.46"                                    # x-release-please-version
authors = ["John Beresford <jberesford@volcaus.com>"]
license = "GPL-3.0"
readme = "./README.md"
repository = "https://github.com/JMBeresford/retrom"

[workspace.dependencies]
signal-hook = "0.3.18"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tauri = { version = "2.9.2", features = ["tracing", "common-controls-v6"] }
tauri-plugin = { version = "2.5.1", features = ["build"] }
tauri-build = "2.5.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-opener = "2.5.2"
tauri-plugin-shell = "2.3.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-fs = "2.4.4"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"
tauri-plugin-upload = "2.3.2"
tauri-plugin-window-state = "2.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
regex = "1.11.1"
# opt out of lzma an xz to avoid linking twice (postrgres_embedded and async_zip)
sevenz-rust2 = "0.12.0"
async-compression = "0.4.20"
async_zip = { version = "^0.0.17", default-features = false, features = [
  "chrono",
  "tokio-fs",
  "deflate",
  "bzip2",
  "zstd",
  "deflate64",
  "lzma",
  "xz",
] }
sha2 = "0.10.8"
url = "2.5.4"
bigdecimal = "0.4.3"
chrono = "0.4.38"
directories = "6.0.0"
diesel = { version = "^2.2.0", features = [
  "serde_json",
  "postgres",
  "numeric",
] }
diesel_migrations = { version = "^2.2.0", features = ["postgres"] }
diesel-async = { version = "^0.7.4", features = ["postgres", "deadpool"] }
deadpool = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-opentelemetry = "0.30.0"
opentelemetry = "0.29.1"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
opentelemetry-http = { version = "0.29.0" }
http = "1.3.1"
opentelemetry-otlp = { version = "0.29.0", features = [
  "grpc-tonic",
  "gzip-tonic",
  "http",
] }
opentelemetry-semantic-conventions = "0.29.0"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "fmt",
  "json",
] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io", "compat"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"

# x-release-please-start-version
retrom-db = { path = "./packages/db", version = "^0.7.46" }
retrom-service = { path = "./packages/service", version = "^0.7.46" }
retrom-grpc-service = { path = "./packages/grpc-service", version = "^0.7.46" }
retrom-rest-service = { path = "./packages/rest-service", version = "^0.7.46" }
retrom-service-common = { path = "./packages/service-common", version = "^0.7.46" }
retrom-telemetry = { path = "./packages/telemetry", version = "^0.7.46" }
retrom-codegen = { path = "./packages/codegen", version = "^0.7.46" }
retrom-plugin-installer = { path = "./plugins/retrom-plugin-installer", version = "^0.7.46" }
retrom-plugin-launcher = { path = "./plugins/retrom-plugin-launcher", version = "^0.7.46" }
retrom-plugin-service-client = { path = "./plugins/retrom-plugin-service-client", version = "^0.7.46" }
retrom-plugin-steam = { path = "./plugins/retrom-plugin-steam", version = "^0.7.46" }
retrom-plugin-config = { path = "./plugins/retrom-plugin-config", version = "^0.7.46" }
retrom-plugin-standalone = { path = "./plugins/retrom-plugin-standalone", version = "^0.7.46" }
# x-release-please-end

config = { version = "0.13.4", features = ["json5"] }
futures = "0.3.30"
bytes = "1.6.0"
reqwest = { version = "0.12.3", features = ["json", "stream"] }
axum = "0.8.6"
tonic = { version = "0.14.2", features = [
  "tls-native-roots",
  "tls-webpki-roots",
] }
tonic-web = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-reflection = "0.14.2"
async-trait = "0.1"
retry = { version = "2.0.0" }
tokio-retry = { version = "0.3.0" }
tokio-stream = "0.1.15"
thiserror = "1.0"
sanitize-filename = "0.5.0"
hyper-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.7.0", features = ["full", "http2", "http1"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.6", features = [
  "full",
  "cors",
  "compression-full",
  "decompression-full",
] }
http-body-util = "0.1.3"
tokio-rustls = { version = "0.26.4", features = ["ring"] }
webpki-roots = "1.0.3"
hyper-rustls = { version = "0.27.0", features = ["http2"] }
notify = "7.0.0"
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
tempfile = "3.16.0"
walkdir = "2.5.0"
zeroize = "1.8.1"
rayon = { version = "1.11.0" }
