[package]
name = "retrom-plugin-config"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin to facilitate client config management."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-config"

[dependencies]
prost = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
retrom-codegen = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]
