[package]
name = "retrom-plugin-installer"
version = "0.0.11"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin that facilitates the installation of games locally."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-installer"

[dependencies]
tauri = { workspace = true }
serde = "1.0"
thiserror = { workspace = true }
retrom-codegen = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }
