[package]
name = "retrom-plugin-installer"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin that facilitates the installation of games locally."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "./node_modules"]
links = "tauri-plugin-installer"

[dependencies]
prost = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
retrom-codegen = { workspace = true }
retrom-plugin-steam = { workspace = true }
retrom-plugin-service-client = { workspace = true }
retrom-plugin-config = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tauri-plugin-opener = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]
