[package]
name = "retrom-plugin-launcher"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin to facilitate the launching of games."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-launcher"

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
retrom-codegen = { workspace = true }
retrom-plugin-installer = { workspace = true }
retrom-plugin-steam = { workspace = true }
retrom-plugin-service-client = { workspace = true }
retry = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tonic-web = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
hyper-rustls = { workspace = true }

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }
