[package]
name = "retrom-plugin-launcher"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin to facilitate the launching of games."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-launcher"

[dependencies]
prost = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
retrom-codegen = { workspace = true }
retrom-plugin-installer = { workspace = true }
retrom-plugin-steam = { workspace = true }
retrom-plugin-service-client = { workspace = true }
retrom-plugin-config = { workspace = true }
walkdir = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]
