[package]
name = "retrom-plugin-service-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin to facilitate accessing the Retrom api within tauri."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-retrom-service-client"

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
retrom-codegen = { workspace = true }
retrom-plugin-config = { workspace = true }
hyper = { workspace = true, features = ["client"] }
hyper-util = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
hyper-rustls = { workspace = true }
tower = { workspace = true }
tonic-web = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true }
