[package]
name = "retrom-plugin-standalone"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Retrom plugin to facilitate standlone mode features."
rust-version = "1.80"
exclude = ["./examples", "./webview-dist", "./webview-src", "**/node_modules"]
links = "tauri-plugin-standalone"

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
retrom-service = { workspace = true, features = ["embedded_db"] }
retrom-plugin-config = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
local-ip-address = "0.6.3"

[build-dependencies]
tauri-plugin = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tauri-plugin"]
